--- a/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00002.md
+++ b/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00002.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/sGNcaSZhPIZ5IEQCXmEji7clMQoxt3QBBuMeSbHN-v4=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACrZfQUUDUcF1p3ks-C4SsCa/luontokuvat/kev%C3%A4t/IMG_20130511_075119-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/eUca4d6a7kAUxuZ9Y9LSq4cz63l7NNjugbxZpj-1330=w800)](https://lh3.googleusercontent.com/eUca4d6a7kAUxuZ9Y9LSq4cz63l7NNjugbxZpj-1330=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACbAOoXrZLURkC557pCOLNYa/luontokuvat/kev%C3%A4t/IMG_20130511_075119-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACiU9dILD0mmrXckEK1D7oAa/luontokuvat/kev%C3%A4t/IMG_20130511_075119.jpg)
