--- a/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00003.md
+++ b/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00003.md
@@ -2,9 +2,9 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/AmMFHO-Qi-WymV9D8LmTmlXMato-pq9ZszEXxQ7VDUw=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACAxOUgNsxGsDmcHtF4otD2a/luontokuvat/kev%C3%A4t/IMG_20130510_055157-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/0vcBuJ3_NTqO8_uf384SVhgZPSZQcEP5il78H-2LDIM=w800)](https://lh3.googleusercontent.com/0vcBuJ3_NTqO8_uf384SVhgZPSZQcEP5il78H-2LDIM=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACKaoXDPHoGWROGR_GDQP3pa/luontokuvat/kev%C3%A4t/IMG_20130510_055157-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB9_wRIqoC0_t5bxVCyppFBa/luontokuvat/kev%C3%A4t/IMG_20130510_055157.jpg)
 
