--- a/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00009.md
+++ b/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00009.md
@@ -2,9 +2,9 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/53u89ANW-T5pGzvqPuKw9C_rhggeBYQPz5H9zEVlQW8=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD0_w7YUgZRnENOAk4yFAWRa/luontokuvat/kev%C3%A4t/20140403_192432-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/Xd437avvKAAZVYkf5OlwhrKpk_gJyUu2GpsK9NIxiFI=w800)](https://lh3.googleusercontent.com/Xd437avvKAAZVYkf5OlwhrKpk_gJyUu2GpsK9NIxiFI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABsr-PBMMvahOCTzqqIP4f9a/luontokuvat/kev%C3%A4t/20140403_192432-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABakSErg_HafInhD_qKFPaha/luontokuvat/kev%C3%A4t/20140403_192432.jpg)
 
