--- a/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00011.md
+++ b/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00011.md
@@ -2,7 +2,7 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/VrdNjtmDl8A2Jclts629j177rvc5QkeTlnI2t4CPjl0=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD1nstbETpOxTfPAO71Zi5La/luontokuvat/kev%C3%A4t/IMG_20130502_200148-245px.jpg
   thumb:
 ---
 
