--- a/en/pictures-of-miki/_posts/2015-07-13-00056.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00056.md
@@ -2,14 +2,14 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/aPLICvG02jROpzeqy-3_tIqXeMQe9s7ilQ-aVhTkV60=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABEP8tAq34TYomrgFlum3Zpa/mikin-kuvat/2/DSC32837-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/xWgvq5m-4ImCEGGyEXUKz2EUWs6pCj_9pim9IkSYv5E=w800)](https://lh3.googleusercontent.com/xWgvq5m-4ImCEGGyEXUKz2EUWs6pCj_9pim9IkSYv5E=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABrqwAD4o6VnreDU94LlYfna/mikin-kuvat/2/DSC32837-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADwS1l6rhpDWGJHwOb7qZkaa/mikin-kuvat/2/DSC32837.jpg)
 
-[![](https://lh3.googleusercontent.com/S5uXEVXOJhBa5eonlyczUv0xPx_4ZOltwmMY_zFPRDE=w800)](https://lh3.googleusercontent.com/S5uXEVXOJhBa5eonlyczUv0xPx_4ZOltwmMY_zFPRDE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABNINWhEr9vopBNk9M6dC0ia/mikin-kuvat/2/DSC32838-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB9ivq0WCNtax0V1dnpcuRUa/mikin-kuvat/2/DSC32838.jpg)
 
-[![](https://lh3.googleusercontent.com/HsYbxZmZck_bGfNzkH_xZJ-GoroEQK9qTrrt0HUvnjE=w800)](https://lh3.googleusercontent.com/HsYbxZmZck_bGfNzkH_xZJ-GoroEQK9qTrrt0HUvnjE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACM6pkYmtmEFuuijfFPxll_a/mikin-kuvat/2/DSC32844-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABSWEPzeHFxMv8WM6LNpXQNa/mikin-kuvat/2/DSC32844.jpg)
 
-[![](https://lh3.googleusercontent.com/Y3e8OR8DBBuZpVB6CkbDny-gJFZrsMfasUOW60jyFw4=w800)](https://lh3.googleusercontent.com/Y3e8OR8DBBuZpVB6CkbDny-gJFZrsMfasUOW60jyFw4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADew1RgdBl-B1IsrH4oRv64a/mikin-kuvat/2/DSC32845-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAZ5xqkkVG6Lhiipntd1Xjfa/mikin-kuvat/2/DSC32845.jpg)
