--- a/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00001.md
+++ b/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00001.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/EDkyLHhyrfCy6ybEYEveHHCTyuI8Wt8Z7F9MYPGrlps=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACohYRj9XZgjU8L0-OTQ13Ya/luontokuvat/kev%C3%A4t/IMG_20130511_074818-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/1LFmDBuy99nhWyoMWwVoph0-EJELbhtb2MLc9Y4NgOc=w800)](https://lh3.googleusercontent.com/1LFmDBuy99nhWyoMWwVoph0-EJELbhtb2MLc9Y4NgOc=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACrDiMX7rVSucJgl3b97Kkya/luontokuvat/kev%C3%A4t/IMG_20130511_074811-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACLLbAa2QbuW7E0VmC2kXGGa/luontokuvat/kev%C3%A4t/IMG_20130511_074811.jpg)
 
-[![](https://lh3.googleusercontent.com/SJLvhRPlMg7QWFBO5t2c3V4UMgHov0v9CaWuCjOGiRs=w800)](https://lh3.googleusercontent.com/SJLvhRPlMg7QWFBO5t2c3V4UMgHov0v9CaWuCjOGiRs=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACrNwCn7E9Q02MZ9OKGOCUHa/luontokuvat/kev%C3%A4t/IMG_20130511_074818-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABrrUgOwPXRxKqYL7hm1kUEa/luontokuvat/kev%C3%A4t/IMG_20130511_074818.jpg)
