--- a/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00005.md
+++ b/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00005.md
@@ -2,9 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/RJJxFCslJruEjli5kIRXTzNse_EYKiv6EaxFffOox8o=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABMmUY7mxwjezYVlyHg2eOMa/luontokuvat/kev%C3%A4t/DSC02862-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/7GkHZrZRiboKnsMZ2VDhcZeuweMCSEBeGYq2zts98xY=w800)](https://lh3.googleusercontent.com/7GkHZrZRiboKnsMZ2VDhcZeuweMCSEBeGYq2zts98xY=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACN9hEzf1ZW4yaPz-cr7SWEa/luontokuvat/kev%C3%A4t/DSC02862-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB-tKJmSK44DpSakkO_WxXya/luontokuvat/kev%C3%A4t/DSC02862.jpg)
 
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABeWR_DfChyu9a3xZV6REQka/luontokuvat/kev%C3%A4t/DSC02855-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC6Fd-NwQzdLhYzjmKjnMlqa/luontokuvat/kev%C3%A4t/DSC02855.jpg)
