--- a/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00015.md
+++ b/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00015.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/hbVh9EHh41M_EtypZ2lWjS3BcRlFDL3QjjPX-K2aEFc=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACmALfOPStRLGzIm31rZNKRa/luontokuvat/kev%C3%A4t/20140412_191623-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/GSwxf2N8FzhOQtTNK6V-vphk4umJhyz3SXK_Phh7yBM=w800)](https://lh3.googleusercontent.com/GSwxf2N8FzhOQtTNK6V-vphk4umJhyz3SXK_Phh7yBM=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAQun5c4Xl0MzohKtwIaaw-a/luontokuvat/kev%C3%A4t/20140412_191627-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADz3MQ6dk9EjYZZ7odnsU_Na/luontokuvat/kev%C3%A4t/20140412_191627.jpg)
 
-[![](https://lh3.googleusercontent.com/K9Okk_YF67igvZJDFy1g34T6drnXoQG36HbCV718Vro=w800)](https://lh3.googleusercontent.com/K9Okk_YF67igvZJDFy1g34T6drnXoQG36HbCV718Vro=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB5TI6Ls9A3w1_32XIOtayxa/luontokuvat/kev%C3%A4t/20140412_191623-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAEQzC-ZY5zuyYY8h3W8XE6a/luontokuvat/kev%C3%A4t/20140412_191623.jpg)
