--- a/luontokuvat/kevat/_posts/2015-07-14-00011.md
+++ b/luontokuvat/kevat/_posts/2015-07-14-00011.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/VrdNjtmDl8A2Jclts629j177rvc5QkeTlnI2t4CPjl0=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD1nstbETpOxTfPAO71Zi5La/luontokuvat/kev%C3%A4t/IMG_20130502_200148-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/GTjOh4suik1iyWtuvtkO1pvExOCmkU_D4LiKheciEcc=w800)](https://lh3.googleusercontent.com/GTjOh4suik1iyWtuvtkO1pvExOCmkU_D4LiKheciEcc=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADhT9m6YjojkSeyqr0vVHMha/luontokuvat/kev%C3%A4t/IMG_20130502_200141-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC6uQYcEmdTq6hDizpUvsu0a/luontokuvat/kev%C3%A4t/IMG_20130502_200141.jpg)
 
-[![](https://lh3.googleusercontent.com/YMzcuwXWilDULM04X9qQCVCJMAFxutzgK5XzBMKoO30=w800)](https://lh3.googleusercontent.com/YMzcuwXWilDULM04X9qQCVCJMAFxutzgK5XzBMKoO30=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC127d4iEMmAzOILM_cnsYna/luontokuvat/kev%C3%A4t/IMG_20130502_200148-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACA0ofGp2EECWnOO5Gx9TGJa/luontokuvat/kev%C3%A4t/IMG_20130502_200148.jpg)
