--- a/luontokuvat/kevat/_posts/2015-07-14-00014.md
+++ b/luontokuvat/kevat/_posts/2015-07-14-00014.md
@@ -2,9 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/tJxBJ4kpvb4kBQMHAboDEvoBS9hZFFItdAzQPcdrKZ4=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABXQJFh6nEiX2I_4Q5QfTxEa/luontokuvat/kev%C3%A4t/DSC04682-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/V_jb2DErp6C7j4RSS3YxJr9WvmAKLr2k9-PmVwi7M-g=w800)](https://lh3.googleusercontent.com/V_jb2DErp6C7j4RSS3YxJr9WvmAKLr2k9-PmVwi7M-g=s0)
-
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADHNCynanzZcTt2NnT66inma/luontokuvat/kev%C3%A4t/DSC04682-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD1JF31JcEASv0cCGZveNvUa/luontokuvat/kev%C3%A4t/DSC04682.jpg)
