--- a/luontokuvat/kevat/_posts/2015-07-14-00016.md
+++ b/luontokuvat/kevat/_posts/2015-07-14-00016.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/9UBKxR_zysalajOkDTEpzTToIJl-HVl0Muz0WG0VNvk=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADq4UMpe4SVf24uhDpPPuzKa/luontokuvat/kev%C3%A4t/20140414_191805-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/GrWeuwZd6KKR9d1qwT7y5EdDn-fL_vt-Elbpo1m1MOI=w800)](https://lh3.googleusercontent.com/GrWeuwZd6KKR9d1qwT7y5EdDn-fL_vt-Elbpo1m1MOI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACKtT1B2-K-d917kWuqBFsHa/luontokuvat/kev%C3%A4t/20140414_190210-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACVC74qCZUuCkk9bq-8Hkvka/luontokuvat/kev%C3%A4t/20140414_190210.jpg)
 
-[![](https://lh3.googleusercontent.com/2r6tWM7ejN4VPN99HQH5xxqJz6oG2471lNH5Rbzcoos=w800)](https://lh3.googleusercontent.com/2r6tWM7ejN4VPN99HQH5xxqJz6oG2471lNH5Rbzcoos=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAlYcXMacySToVdXNVuh1FXa/luontokuvat/kev%C3%A4t/20140414_191805-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA8ZeX3uQ3hhmhqDAhAQw2Na/luontokuvat/kev%C3%A4t/20140414_191805.jpg)
