--- a/luontokuvat/kevat/_posts/2015-07-14-00018.md
+++ b/luontokuvat/kevat/_posts/2015-07-14-00018.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/7gQPBTD2m4avYvH1OEl0yO9Gf1ANQ_0nFt5It0W14Oo=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACvj83M7kwYHHF63ozXL0aWa/luontokuvat/kev%C3%A4t/DSC05103-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/hk5oQK8PXDg3BOB-LQcP4kKPNXzfycVGL9Q68XvwEXI=w800)](https://lh3.googleusercontent.com/hk5oQK8PXDg3BOB-LQcP4kKPNXzfycVGL9Q68XvwEXI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACGb7S5sieE9xdH29FilEZ-a/luontokuvat/kev%C3%A4t/DSC05096-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACiNhGW0m7y9kFuhq3FSzh9a/luontokuvat/kev%C3%A4t/DSC05096.jpg)
 
-[![](https://lh3.googleusercontent.com/zea_Ws2N4VKdKP3SEQbLSMJGScEnSjLjyJXADUrzTLc=w800)](https://lh3.googleusercontent.com/zea_Ws2N4VKdKP3SEQbLSMJGScEnSjLjyJXADUrzTLc=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADfNCHaN6gR6GiX3ynYuOMFa/luontokuvat/kev%C3%A4t/DSC05103-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD4m-ohP0rrTMg3xrNG5ndba/luontokuvat/kev%C3%A4t/DSC05103.jpg)
