--- a/luontokuvat/kevat/_posts/2015-07-14-00022.md
+++ b/luontokuvat/kevat/_posts/2015-07-14-00022.md
@@ -2,9 +2,9 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/RArQKhMvyPYIlw0aXeVXo4Vzvvi8zzxeUJg0Fgopq-U=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC20rvwfVgK7f_keto24nRFa/luontokuvat/kes%C3%A4/2/20140506_193128-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/ZMN0OtN5BoDgXu7juulfi9v2bNqC4ttcgXkbfrG8CZs=w800)](https://lh3.googleusercontent.com/ZMN0OtN5BoDgXu7juulfi9v2bNqC4ttcgXkbfrG8CZs=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABRBPyS0YVmERv6m-AYU20Ha/luontokuvat/kes%C3%A4/2/20140506_193128-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABimjAlDgFARSVU7nRGS6Jka/luontokuvat/kes%C3%A4/2/20140506_193128.jpg)
 
