--- a/luontokuvat/kevat/_posts/2015-07-14-00025.md
+++ b/luontokuvat/kevat/_posts/2015-07-14-00025.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/4_E9PMOKfIgWpsuJTZwK4z_yiiNJXW8tKBjGGDEN98s=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADGHyyP3JU-FZeojPuURMjma/luontokuvat/kes%C3%A4/2/DSC05767-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/ganFmZiKClS3mh_QiLyIHRbDgh-misncRI_UjGw7PZI=w800)](https://lh3.googleusercontent.com/ganFmZiKClS3mh_QiLyIHRbDgh-misncRI_UjGw7PZI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB8GOjf1O3eULTlcVJ9LSUoa/luontokuvat/kes%C3%A4/2/DSC05767-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB1tlc35iZzCJ-p4_gjNOu5a/luontokuvat/kes%C3%A4/2/DSC05767.jpg)
 
-[![](https://lh3.googleusercontent.com/8b759Ek3uvCAhxrE_jfHvl1gSXU3ymyQcm0wYeJUFqg=w800)](https://lh3.googleusercontent.com/8b759Ek3uvCAhxrE_jfHvl1gSXU3ymyQcm0wYeJUFqg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADjhO-Zyq5lAnRSF6WvfHkSa/luontokuvat/kes%C3%A4/2/20140430_194635-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABX4SvQlzweF6mr2opyG9BIa/luontokuvat/kes%C3%A4/2/20140430_194635.jpg)
