--- a/luontokuvat/talvi/_posts/2015-07-14-00002.md
+++ b/luontokuvat/talvi/_posts/2015-07-14-00002.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/5bygKYIA5D6je9FWZhVsbS3d4Q2Sg8wSWymlGyZA6jQ=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAALH2NFg8nzcovskvuQF_5Ka/luontokuvat/talvi/IMG07740-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/AE_-fFeGRVwjOzCWu3L9YSalNTfzmfcePYdFW4ztQ-U=w800)](https://lh3.googleusercontent.com/AE_-fFeGRVwjOzCWu3L9YSalNTfzmfcePYdFW4ztQ-U=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAnmMjKEw_WleNh9Z373fwwa/luontokuvat/talvi/IMG07749-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAs9Gd8TZ1w2OHwlIsUuP_wa/luontokuvat/talvi/IMG07749.jpg)
 
-[![](https://lh3.googleusercontent.com/rUqlRXlSzUPih0DgWqGmCcq287sB42u1yeqn2uG2JAo=w800)](https://lh3.googleusercontent.com/rUqlRXlSzUPih0DgWqGmCcq287sB42u1yeqn2uG2JAo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA-fAL8reaCC4NCd-l-WNzua/luontokuvat/talvi/IMG07740-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA0CtImcsH006AkHmsnSwria/luontokuvat/talvi/IMG07740.jpg)
