--- a/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00004.md
+++ b/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00004.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/vtEQPhzMRw7CqIN16bjZnzm30jmEQdMO35C3t0Y9qkY=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAClvLE0wK6cMpQ6AyXMmTqra/luontokuvat/talvi/20130119_154909-245px%20%282%29.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/gYKHVFXloRUTSVHz_GZ4oMrdeDKDdoyhGblewKITi5I=w800)](https://lh3.googleusercontent.com/gYKHVFXloRUTSVHz_GZ4oMrdeDKDdoyhGblewKITi5I=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAeGE2hGykPNO5qFbAIblHta/luontokuvat/talvi/20130119_155655-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADbbLwX5iwEUefAkY5MWNs7a/luontokuvat/talvi/20130119_155655.jpg)
 
-[![](https://lh3.googleusercontent.com/tb_IfPGHrFGeF4Tdar-i5pOyLpD06rV03RDkW--CwKo=w800)](https://lh3.googleusercontent.com/tb_IfPGHrFGeF4Tdar-i5pOyLpD06rV03RDkW--CwKo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAvH-bec_5sHAR0SCWurZnra/luontokuvat/talvi/20130119_154909-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADhr69HHjSb-y0Tt58TMQzba/luontokuvat/talvi/20130119_154909.jpg)
 
-[![](https://lh3.googleusercontent.com/5xlmpWotM1o31PnhSw_YsWkaDsZPx9WqxQzrG8ypauE=w800)](https://lh3.googleusercontent.com/5xlmpWotM1o31PnhSw_YsWkaDsZPx9WqxQzrG8ypauE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACNElOD7EYM1JoKmodLm-83a/luontokuvat/talvi/20130119_154625-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABFmqDMEi5SUt81FqLqKc5Aa/luontokuvat/talvi/20130119_154625.jpg)
