--- a/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00005.md
+++ b/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00005.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/kJIniwzccXiahAJZVml_gRd1oJN5rwLi7aMFWoPNvAI=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADUAAFYz2wlTeJW-JFmCOala/luontokuvat/talvi/IMG10241-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/uU0orDJmlB-4SbSqtWJgNZ_W81yPt11b_e6gIwP5zj8=w800)](https://lh3.googleusercontent.com/uU0orDJmlB-4SbSqtWJgNZ_W81yPt11b_e6gIwP5zj8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACyO4OiPcJ0z__dVMQ3O0l2a/luontokuvat/talvi/IMG10241-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA5DKIYb8ioGyzNEys-RMGfa/luontokuvat/talvi/IMG10241.jpg)
 
-[![](https://lh3.googleusercontent.com/9wtbu5vLB6uebxeT_jSbRshUBzcFgY8bQr6H917_qXE=w800)](https://lh3.googleusercontent.com/9wtbu5vLB6uebxeT_jSbRshUBzcFgY8bQr6H917_qXE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD4EJ_zn0N8K0xpgslgZQgTa/luontokuvat/talvi/IMG10243-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAse6HVocwDYQYAHxfue1qma/luontokuvat/talvi/IMG10243.jpg)
