--- a/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00003.md
+++ b/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00003.md
@@ -2,18 +2,18 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/ayi3dr6o6X_7BylbxJJMXAb994Do3jhjgAf1CIoed0E=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAeYme32fSkxj7rAFGujsfKa/luontokuvat/talvi/IMG_0605-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/FjYrKYyAuGLdupIc0lzbHh_o4Y7aEV95qtLEzoHk2gY=w800)](https://lh3.googleusercontent.com/FjYrKYyAuGLdupIc0lzbHh_o4Y7aEV95qtLEzoHk2gY=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABPUaRbnbTZ4JjtAI7sVt4ga/luontokuvat/talvi/IMG_0604-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACE5vedD1KYdT8xgoqzRrJqa/luontokuvat/talvi/IMG_0604.jpg)
 
-[![](https://lh3.googleusercontent.com/3U7gqwsB6yGqOavxpnjvgGpHedlk2xWiy3ZgGzX_BLY=w800)](https://lh3.googleusercontent.com/3U7gqwsB6yGqOavxpnjvgGpHedlk2xWiy3ZgGzX_BLY=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADZLEVFAnfx8T5Br0Yi9P6xa/luontokuvat/talvi/IMG_0603-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACtP2e07XqlrdOdorDqx5twa/luontokuvat/talvi/IMG_0603.jpg)
 
-[![](https://lh3.googleusercontent.com/J56Lh4St-cB4i_nli5LXLuzD-lxitinY-jWFnxvUQAI=w800)](https://lh3.googleusercontent.com/J56Lh4St-cB4i_nli5LXLuzD-lxitinY-jWFnxvUQAI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAYsH4s3ykQeyh7YGUjNZswa/luontokuvat/talvi/IMG_0608-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACKdQdvKULECz0nwkqJM93ja/luontokuvat/talvi/IMG_0608.jpg)
 
-[![](https://lh3.googleusercontent.com/70nlmI42wV-w3vsXkUI-IpQdwBuj2TB7_XEbcWR7lHU=w800)](https://lh3.googleusercontent.com/70nlmI42wV-w3vsXkUI-IpQdwBuj2TB7_XEbcWR7lHU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAVKHqPHtY4IYiVTGzHe-KEa/luontokuvat/talvi/IMG_0605-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB8cPAkjauWL4THAapyaw1Pa/luontokuvat/talvi/IMG_0605.jpg)
 
-[![](https://lh3.googleusercontent.com/xKz6vj6E_ULkQO3CMUHfC46vzPBowQoHdSQou9TBqx8=w800)](https://lh3.googleusercontent.com/xKz6vj6E_ULkQO3CMUHfC46vzPBowQoHdSQou9TBqx8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABIWiIrYpEZlg8cE3QOEblya/luontokuvat/talvi/IMG_0610-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABx0dSQNgRrXQsjI1j00BV0a/luontokuvat/talvi/IMG_0610.jpg)
 
-[![](https://lh3.googleusercontent.com/7HDKB7fVgEmE0Vqobe_ceb1dNoo7NKxBbzjyTa0gop0=w800)](https://lh3.googleusercontent.com/7HDKB7fVgEmE0Vqobe_ceb1dNoo7NKxBbzjyTa0gop0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB0B7iqFGz1dZii66YY94VOa/luontokuvat/talvi/IMG_0607-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC-de5g0-78GCbNsJU0gC4na/luontokuvat/talvi/IMG_0607.jpg)
