--- a/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00007.md
+++ b/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00007.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/Tc04LxE8tF7YsRl_OkfZujhjYmly5d9Oibukahl2EE0=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADEP2MPgt7fdIrxY-8mt5Qta/luontokuvat/talvi/IMG17307-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/0UXMDs6FWPghiQGPiEf5OXLkiJKFvickPoedNvsYrG0=w800)](https://lh3.googleusercontent.com/0UXMDs6FWPghiQGPiEf5OXLkiJKFvickPoedNvsYrG0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACibK6oMst4Fmm8UpiJC97ma/luontokuvat/talvi/IMG17307-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACNDOOIoE55Vjpb5G1mJlbma/luontokuvat/talvi/IMG17307.jpg)
