--- a/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00009.md
+++ b/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00009.md
@@ -2,14 +2,14 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/q7NdV_s2c7CEjLyiX5xVvPawm4OFrtjypNn-RnuWXeg=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAgWAeC44RBVgJadnmfc2QRa/luontokuvat/talvi/IMG17939-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/BIQLdR9QII-ESc6PplHG7b7RDlb1ioiKesHDNasTFAA=w800)](https://lh3.googleusercontent.com/BIQLdR9QII-ESc6PplHG7b7RDlb1ioiKesHDNasTFAA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABURweyP2aAHiuykwAxXytXa/luontokuvat/talvi/IMG17914-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABOVa2tRFAoA8g7Tl5rrxnea/luontokuvat/talvi/IMG17914.jpg)
 
-[![](https://lh3.googleusercontent.com/EuJZ7R-KzmHylovE8j4xQWWQRHNjLVcaPpj8yTby4uM=w800)](https://lh3.googleusercontent.com/EuJZ7R-KzmHylovE8j4xQWWQRHNjLVcaPpj8yTby4uM=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC95n94HXwdBPjWRH5x3wyja/luontokuvat/talvi/IMG17919-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAApkIhQMS-a4cJQ98JpdFBCa/luontokuvat/talvi/IMG17919.jpg)
 
-[![](https://lh3.googleusercontent.com/qfKwF8uvUErzeDPUj6jFUuGFve8f0aoDYrKWqY4bV5s=w800)](https://lh3.googleusercontent.com/qfKwF8uvUErzeDPUj6jFUuGFve8f0aoDYrKWqY4bV5s=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD_OEEBNGhP99PT79xJAGXAa/luontokuvat/talvi/IMG17922-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADOpimXggOYejmeuDwstUSIa/luontokuvat/talvi/IMG17922.jpg)
 
-[![](https://lh3.googleusercontent.com/IqTjL2sAYdkGFIlQJ8t63uDUVm6MDP6-BA7w92craI4=w800)](https://lh3.googleusercontent.com/IqTjL2sAYdkGFIlQJ8t63uDUVm6MDP6-BA7w92craI4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAfx6q7PKQSTSl4PtMuGIJda/luontokuvat/talvi/IMG17939-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAFNeeAtKefFKZvoCwRUobIa/luontokuvat/talvi/IMG17939.jpg)
