--- a/luontokuvat/talvi/_posts/2015-07-14-00006.md
+++ b/luontokuvat/talvi/_posts/2015-07-14-00006.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/JprjeZ0IXVR8cJ1eE2XlSiMWqjz7FOWN6J6WG4HL3Uo=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACRuuyvFFFDthg6IV3pqFGPa/luontokuvat/talvi/IMG16175-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/TvSXhpB15wmI_nmpeng4Y6ZlZ57Y1t7j91TVUH5s6qI=w800)](https://lh3.googleusercontent.com/TvSXhpB15wmI_nmpeng4Y6ZlZ57Y1t7j91TVUH5s6qI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD04-ObC2Lx1tUcoVxBuX9Ja/luontokuvat/talvi/IMG16175-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD8H7euNx9sDXwbbE-PdwU4a/luontokuvat/talvi/IMG16175.jpg)
 
-[![](https://lh3.googleusercontent.com/gMjvHMo1-r5yit3S9jo3_DoXsiu4Xh4Zvfq2IqpqFy0=w800)](https://lh3.googleusercontent.com/gMjvHMo1-r5yit3S9jo3_DoXsiu4Xh4Zvfq2IqpqFy0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABdtclLly0t7dbt38GEWQEWa/luontokuvat/talvi/IMG16173-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABYKMPh9cwB7F0vV4uoJf9Aa/luontokuvat/talvi/IMG16173.jpg)
