--- a/luontokuvat/talvi/_posts/2015-07-14-00008.md
+++ b/luontokuvat/talvi/_posts/2015-07-14-00008.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/N2LjFfJqI2JiXEWrJMpMPMx01iyP_wJXbHV9CEZn6Ps=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADrmM2rSeXVoLMDaLHqZjQta/luontokuvat/talvi/IMG17895-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/prgdsM9YvVGnW_zt5bVC_jGH5lihcOm66NWG8uU57E4=w800)](https://lh3.googleusercontent.com/prgdsM9YvVGnW_zt5bVC_jGH5lihcOm66NWG8uU57E4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACqAUpjiryKIrO0X5Y0OAqGa/luontokuvat/talvi/IMG17895-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACDI4l_yaXStd-O__D7oYwua/luontokuvat/talvi/IMG17895.JPG)
 
-[![](https://lh3.googleusercontent.com/0cymrAWYtT9jNdWg6Qp5zVUhPL4t_KzKM8P83YknsWE=w800)](https://lh3.googleusercontent.com/0cymrAWYtT9jNdWg6Qp5zVUhPL4t_KzKM8P83YknsWE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC7p0pXokoXgGP0cfh8XzFKa/luontokuvat/talvi/IMG17899-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACxd8Su5zXMnjGtycWRsonCa/luontokuvat/talvi/IMG17899.jpg)
