--- a/luontokuvat/talvi/_posts/2015-07-14-00010.md
+++ b/luontokuvat/talvi/_posts/2015-07-14-00010.md
@@ -2,14 +2,14 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/smEFDI4dZYrlrtxSOyctBgFszCbK1OUcKkLphTaPWf8=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABsKc9bB8ChfoRqpnyEdy4La/luontokuvat/talvi/IMG_2668-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/kcbBslug57QmNpp5Jh0DV9kPMH-JIFrELHU6CxctLpY=w800)](https://lh3.googleusercontent.com/kcbBslug57QmNpp5Jh0DV9kPMH-JIFrELHU6CxctLpY=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAznMl72ZmkFeOIXboqZNp6a/luontokuvat/talvi/IMG_2668-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACQcGtMYmST2U_qvXIXkHaDa/luontokuvat/talvi/IMG_2668.jpg)
 
-[![](https://lh3.googleusercontent.com/fATz3oPSOpnrr2U1CQwXf4Ya5OKs6tMAlhXh6n4Xgww=w800)](https://lh3.googleusercontent.com/fATz3oPSOpnrr2U1CQwXf4Ya5OKs6tMAlhXh6n4Xgww=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADmiBkhks86pqbK2gcmp1CJa/luontokuvat/talvi/IMG_2670-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACECWzGySMA9b4iSGy2KaFFa/luontokuvat/talvi/IMG_2670.jpg)
 
-[![](https://lh3.googleusercontent.com/UA5F7Nx0ryHTAnlUHABDJAvSXScWWaCrujWPrHeEYt8=w800)](https://lh3.googleusercontent.com/UA5F7Nx0ryHTAnlUHABDJAvSXScWWaCrujWPrHeEYt8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD7hbOQZTJvA52lC2BVh7nSa/luontokuvat/talvi/IMG_2671-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADKTV09btyNXtKnQELP27lUa/luontokuvat/talvi/IMG_2671.jpg)
 
-[![](https://lh3.googleusercontent.com/RR8GPdGQ7ioGepmcB_9iFGs7c7CgDzIjrvtz9hXJf2U=w800)](https://lh3.googleusercontent.com/RR8GPdGQ7ioGepmcB_9iFGs7c7CgDzIjrvtz9hXJf2U=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADfIH_r5QpsTihlb6Bsn6nKa/luontokuvat/talvi/IMG_2682-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADZyqysqoa05j6Pmb4Q7Czya/luontokuvat/talvi/IMG_2682.jpg)
