--- a/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00011.md
+++ b/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00011.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/_2aCk0RMk0fw1CPifOqoKbuO6bEwVcL3pAtM23hdEes=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACujg8l6j3GZRJ9AoLtmjQ6a/luontokuvat/talvi/IMG29631-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/TrrBiJ5Lvv5-bA5pT17Jh0Uj1AM921oJWvynK2QBlME=w800)](https://lh3.googleusercontent.com/TrrBiJ5Lvv5-bA5pT17Jh0Uj1AM921oJWvynK2QBlME=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABkBXw2R-VvNLJFpWdv0n-ba/luontokuvat/talvi/IMG29631-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACzKHj3iWjPy9Ub0hmtp7n3a/luontokuvat/talvi/IMG29631.jpg)
