--- a/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00013.md
+++ b/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00013.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/2jXhyryOii7klI0pW6MklUTHtCxpJrU-0eU9gtgJGb4=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADhZxIY7_1HPAogbBStwQAqa/luontokuvat/talvi/IMG_20140316_080411-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/61xs2KVNEVZqD7tJjfwbQkE21hMXPoRyHrzDrUPizSA=w800)](https://lh3.googleusercontent.com/61xs2KVNEVZqD7tJjfwbQkE21hMXPoRyHrzDrUPizSA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAs8MmwxEfT_YSU0prsjeKka/luontokuvat/talvi/IMG_20140316_080411-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB9LQDIarkS-XhN9E4aXkm9a/luontokuvat/talvi/IMG_20140316_080411.jpg)
