--- a/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00014.md
+++ b/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00014.md
@@ -2,20 +2,20 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/OuwcKBOpe7eOuefnhl3sPkVbK0mEltDYCKODUj-8Kd0=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACcbW0hTU-LLtLtD6N6GKtoa/luontokuvat/talvi/DSC18187-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/Jx4-pcr8l1guyeFmcti9t4vulOmhRy8VuyrE4gyGBxg=w800)](https://lh3.googleusercontent.com/Jx4-pcr8l1guyeFmcti9t4vulOmhRy8VuyrE4gyGBxg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAATEnl0nZAKh664zSH0OIJ2a/luontokuvat/talvi/DSC18077-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAClVEhs7XyU9LgnXy1miE-ba/luontokuvat/talvi/DSC18077.jpg)
 
-[![](https://lh3.googleusercontent.com/wFL4zdVjjQ7tw6uEWi3dequaRa_TIo145mDshRdR2lI=w800)](https://lh3.googleusercontent.com/wFL4zdVjjQ7tw6uEWi3dequaRa_TIo145mDshRdR2lI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACezAqmmCuw4U2JsuFOLJxUa/luontokuvat/talvi/DSC18119-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACvQ-Us5kqLntOcEWrxOhb4a/luontokuvat/talvi/DSC18119.jpg)
 
-[![](https://lh3.googleusercontent.com/HUET21FJajxFxHYW5TRh7jH5PEFf-rQ0qNY1JJ_3gXM=w800)](https://lh3.googleusercontent.com/HUET21FJajxFxHYW5TRh7jH5PEFf-rQ0qNY1JJ_3gXM=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABCi4namAs21ulu9HCJrd8Ra/luontokuvat/talvi/DSC18120-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACBs_pWgYF6tDzaEZ6SXkvUa/luontokuvat/talvi/DSC18120.jpg)
 
-[![](https://lh3.googleusercontent.com/qTU4STBjtlF_HxyGatkqO1k5v-bGjkhLyiFxHem-tSk=w800)](https://lh3.googleusercontent.com/qTU4STBjtlF_HxyGatkqO1k5v-bGjkhLyiFxHem-tSk=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAPXMo49AyFnm_IJVddidP9a/luontokuvat/talvi/DSC18124-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACrTOijeuGKyufoKb-ZfJRxa/luontokuvat/talvi/DSC18124.jpg)
 
-[![](https://lh3.googleusercontent.com/cVSzw1PsdfDp5zq000que5zpq_qeOmK0QhRL1deBFfg=w800)](https://lh3.googleusercontent.com/cVSzw1PsdfDp5zq000que5zpq_qeOmK0QhRL1deBFfg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA6OGMOWW6HF-sYHjne-yWza/luontokuvat/talvi/DSC18126-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABn4inP3MuWiD9twdCfXzwTa/luontokuvat/talvi/DSC18126.jpg)
 
-[![](https://lh3.googleusercontent.com/FTSz80reb9seZpd5fdxl-P4wwBtdBAlzq72Gk8QOi7Y=w800)](https://lh3.googleusercontent.com/FTSz80reb9seZpd5fdxl-P4wwBtdBAlzq72Gk8QOi7Y=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADnnjqcW88_ThkJQvpI7s94a/luontokuvat/talvi/DSC18503-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD8Fit-jLZFV_d-xcrsjyLda/luontokuvat/talvi/DSC18503.jpg)
 
-[![](https://lh3.googleusercontent.com/T3xeiwjmOsNmwq-qBe_1Hpe5RcVX2rYe3uaagOPFOoQ=w800)](https://lh3.googleusercontent.com/T3xeiwjmOsNmwq-qBe_1Hpe5RcVX2rYe3uaagOPFOoQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAFJ0jF73tk9t-z2fDC97zba/luontokuvat/talvi/DSC18187-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACtKls3YqFAx9To24gIqpf0a/luontokuvat/talvi/DSC18187.jpg)
