--- a/luontokuvat/talvi/_posts/2015-07-14-00012.md
+++ b/luontokuvat/talvi/_posts/2015-07-14-00012.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/LKK39X-q9XLYBNI7JRNnJSsNtEroF2BEb1yJCCIBn_k=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAhjomuhPSkBXLWF1nQzabPa/luontokuvat/talvi/IMG30070-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/fnPYys7qiXYw6O36Um0xAHFvi1d9DdIOcK4oA4IdL-A=w800)](https://lh3.googleusercontent.com/fnPYys7qiXYw6O36Um0xAHFvi1d9DdIOcK4oA4IdL-A=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABn21Rz8mr9rQJ1-QBzYEAca/luontokuvat/talvi/IMG30070-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADEwe3DUEoZnG44Svt_sENWa/luontokuvat/talvi/IMG30070.jpg)
