--- a/luontokuvat/talvi/_posts/2015-07-14-00015.md
+++ b/luontokuvat/talvi/_posts/2015-07-14-00015.md
@@ -2,9 +2,9 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/4PqRPWbP7FLqcjDg0hR3aMn43JQelNvobU9XCZ_Wacw=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACRteUIyEL4irxQoBCbw_KVa/luontokuvat/talvi/DSC19752-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/bV2FvpllejRaHacqrq_L-uSbZ3UMfpDktEzpBWlsthk=w800)](https://lh3.googleusercontent.com/bV2FvpllejRaHacqrq_L-uSbZ3UMfpDktEzpBWlsthk=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAdzlhimkCO1q35MYehn7ena/luontokuvat/talvi/DSC19752-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAATD2A4JcENbBmCKIO3oMfwa/luontokuvat/talvi/DSC19752.jpg)
 
