--- a/luontokuvat/talvi/_posts/2015-07-14-00016.md
+++ b/luontokuvat/talvi/_posts/2015-07-14-00016.md
@@ -2,9 +2,9 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/1pQxCiyyTxQqfxCL-WKd6iFVxpCrQoo3IGnXtzvCirA=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA98MaE48-yCld0n9DZXdkZa/luontokuvat/talvi/DSC19772-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/A4uw2QBBzmji0nkNkO8DVjrTwQwlZfi3fIQaNLiIipE=w800)](https://lh3.googleusercontent.com/A4uw2QBBzmji0nkNkO8DVjrTwQwlZfi3fIQaNLiIipE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACn6P-GVxSCn9pPFjfR5oLsa/luontokuvat/talvi/DSC19772-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADAIAUlyB5DGcO2dTGp4KgXa/luontokuvat/talvi/DSC19772.jpg)
 
