--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00009.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00009.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/PGuydWVGJUg5_yCpskNZ1AaUbneRI5d1IRlDWGSHhzs=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA6yX5DkQkYI7MhcGesoHjNa/luontokuvat/kes%C3%A4/1/20130830_201947-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/AunU6_9BAQGu_iFuGApODkcCDjS5QRtNUjxojj9jV8A=w800)](https://lh3.googleusercontent.com/AunU6_9BAQGu_iFuGApODkcCDjS5QRtNUjxojj9jV8A=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADrllZr9cbu3z54MCYKc-Eda/luontokuvat/kes%C3%A4/1/20130830_201417-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC9LzadAzKi6194KuLsCPSna/luontokuvat/kes%C3%A4/1/20130830_201417.jpg)
 
-[![](https://lh3.googleusercontent.com/9lvqkTVo5jMY_f-Epm8KFXDqrx0X7q7pMgSTFA9rj4w=w800)](https://lh3.googleusercontent.com/9lvqkTVo5jMY_f-Epm8KFXDqrx0X7q7pMgSTFA9rj4w=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADuii56By4pOCHQQJlw2MVea/luontokuvat/kes%C3%A4/1/20130830_201421-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACqiylnysN-NhuOUamwvHeua/luontokuvat/kes%C3%A4/1/20130830_201421.jpg)
 
-[![](https://lh3.googleusercontent.com/KZ9VuNGhUifdtgpB62Q17E_v0hTV8l0_e3IAXB2XIIE=w800)](https://lh3.googleusercontent.com/KZ9VuNGhUifdtgpB62Q17E_v0hTV8l0_e3IAXB2XIIE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADR_mlC-xiEQVy92tlXYqTXa/luontokuvat/kes%C3%A4/1/20130830_201947-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADJGl1H7w0BacGdlPMp9iQsa/luontokuvat/kes%C3%A4/1/20130830_201947.jpg)
