--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00010.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00010.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/-1h5olfeVNmLkowNfNpP8XtkHzle7bVYPe2QHgQ3wS0=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADJeMHl5zgTjKdumwzH5wHpa/luontokuvat/kes%C3%A4/2/20130902_073112-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/oQMlyNG5dkmm2T-v6bqI333A_nOMjUa3oph_ySifZXA=w800)](https://lh3.googleusercontent.com/oQMlyNG5dkmm2T-v6bqI333A_nOMjUa3oph_ySifZXA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACdVYyB-jD3_BNch-aQWBiKa/luontokuvat/kes%C3%A4/1/20130902_073112-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACGl02Q6jj703NdBf2uTcn2a/luontokuvat/kes%C3%A4/1/20130902_073112.jpg)
