--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00029.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00029.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/DhQN1_DdI92PXBYXWnktXA7MEG5LkRsKuq7Rkd9N8u8=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACNcb0a3PYuqOgCME_rlP1-a/luontokuvat/syksy/DSC14280-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/CkqxY3c_EQNrupKS-428Av0O8hxFW7UmFmnalK06wNg=w800)](https://lh3.googleusercontent.com/CkqxY3c_EQNrupKS-428Av0O8hxFW7UmFmnalK06wNg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACgJ6eWMREMSMXSHdgAwIDZa/luontokuvat/syksy/DSC14222-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADe2UdCAuHiBsbE-fBE5KrGa/luontokuvat/syksy/DSC14222.jpg)
 
-[![](https://lh3.googleusercontent.com/mAw2b3pyUVBpqKL1j6p7bveKCBZjvZaguuEVjd_YQfI=w800)](https://lh3.googleusercontent.com/mAw2b3pyUVBpqKL1j6p7bveKCBZjvZaguuEVjd_YQfI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACLk38oPErWCcsoIKpc-OQTa/luontokuvat/syksy/DSC14280-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA32_2cOOxTTbUtgF0xGITUa/luontokuvat/syksy/DSC14280.jpg)
 
-[![](https://lh3.googleusercontent.com/sV6PZnb7MTzVuK_OVjOKJqnkryW2Y5728GHRd0qsK_U=w800)](https://lh3.googleusercontent.com/sV6PZnb7MTzVuK_OVjOKJqnkryW2Y5728GHRd0qsK_U=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC_0UGpDJ7q4HvkRhoFPYM0a/luontokuvat/syksy/DSC14382-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABkdL6f0y4uHiEJGMt8kBsWa/luontokuvat/syksy/DSC14382.jpg)
