--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00031.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00031.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/IvcxBFpnIlmGnng-fO0W9CLjVm-F3WrQ5imjJbk928I=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC7LCGy_QKrUt2S6pq68yNMa/luontokuvat/syksy/DSC14429-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/UW_xPpROv9ij1c9ivWdtq64lZUjQ1ADCo9Vo6C3Pr58=w800)](https://lh3.googleusercontent.com/UW_xPpROv9ij1c9ivWdtq64lZUjQ1ADCo9Vo6C3Pr58=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAdvJDE1xBUsp9fawHw_jSma/luontokuvat/syksy/DSC14429-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACfQ9eSJPXH_G7vUgTujwrxa/luontokuvat/syksy/DSC14429.jpg)
