--- a/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00018.md
+++ b/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00018.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/qS1Ue9KPdHrSyfEXX_dQ0VCDLWcbsD4GrwghmF-3oPE=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC-pjjOCK2y6inYkxAUWccta/luontokuvat/talvi/DSC20220-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/lXn7Xgj5Hw7EGoL23OzxHMDrgvsqMvwEIX7FmeQZmMo=w800)](https://lh3.googleusercontent.com/lXn7Xgj5Hw7EGoL23OzxHMDrgvsqMvwEIX7FmeQZmMo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACJ2PgE3BSwY2RFV0oaNDHca/luontokuvat/talvi/DSC20220-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB3reSGTYL-2sxJCKB0-T1ba/luontokuvat/talvi/DSC20220.jpg)
 
-[![](https://lh3.googleusercontent.com/nJ5vzZVqg-0Q48QFUEWcfKfgT8tnsBw5hWSHrar2ZcU=w800)](https://lh3.googleusercontent.com/nJ5vzZVqg-0Q48QFUEWcfKfgT8tnsBw5hWSHrar2ZcU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAJUyw74zo90d_6mTrZpelHa/luontokuvat/talvi/DSC20286-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACkJv6FWnJb7odLcjhJ3PFfa/luontokuvat/talvi/DSC20286.jpg)
