--- a/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00019.md
+++ b/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00019.md
@@ -2,9 +2,9 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/f6TxJu-YusU4TJcU1lASBqdwXoyQ0YezycGs9N7AL48=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADzh8W5JDgpYGJSw2xoOD1ya/luontokuvat/talvi/DSC21978-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/qvrx0TqjwpwpVw84qzH4Apo3kEvC8ThEj6bokbxg170=w800)](https://lh3.googleusercontent.com/qvrx0TqjwpwpVw84qzH4Apo3kEvC8ThEj6bokbxg170=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABnMtk_Xa4-7Vxb2l1U8_oea/luontokuvat/talvi/DSC21978-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADZuWICVL7XSiDBm4taNrTTa/luontokuvat/talvi/DSC21978.jpg)
 
