--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00005.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00005.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/tjZrIJLltyBKvwlLkoVcg3E_mfWM12YLSy1z3qaySVk=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADi5pDjyMonLPpNmdJbBQkwa/luontokuvat/syksy/IMG_0572-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/bpQjpUe6Rnen9m2UO4b_BNe927fSyR836qD1gtaIp64=w800)](https://lh3.googleusercontent.com/bpQjpUe6Rnen9m2UO4b_BNe927fSyR836qD1gtaIp64=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAnH2nx9rAk6i3n9qLSGyOpa/luontokuvat/syksy/IMG_0572-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAASw1xYNKng0SartJiBSmCsa/luontokuvat/syksy/IMG_0572.jpg)
 
-[![](https://lh3.googleusercontent.com/7sj_Dbe3e16ZIxUoRPPDC1E-rd_qyQ3nlnS2OCSJNBU=w800)](https://lh3.googleusercontent.com/7sj_Dbe3e16ZIxUoRPPDC1E-rd_qyQ3nlnS2OCSJNBU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAYsVma98D6Nlllo5OFEImUa/luontokuvat/syksy/IMG_0595-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABcCUsSNmbT2ZLjxXbDkwKha/luontokuvat/syksy/IMG_0595.jpg)
 
-[![](https://lh3.googleusercontent.com/fRD3AQU2Vl_JRfYCpg8V1Y_xOle6K7lY117s9Vn7iGU=w800)](https://lh3.googleusercontent.com/fRD3AQU2Vl_JRfYCpg8V1Y_xOle6K7lY117s9Vn7iGU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADLAVStZoTDKS4L-Wv4Sh7ra/luontokuvat/syksy/IMG_0600-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAWaRuIeCiW0haHcAfHbsn7a/luontokuvat/syksy/IMG_0600.jpg)
