--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00006.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00006.md
@@ -2,9 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/zF6CtcSYWjPLWSFONxF2h4yLjuzfqzxtrEqikBvNjUs=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAmZTUuNrihAN4J6T24xZG6a/luontokuvat/syksy/IMG_0637-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/mhpjMBJMW1zuJvqC3YCy5rr0Z6Eknxdqsaxn08a2JtE=w800)](https://lh3.googleusercontent.com/mhpjMBJMW1zuJvqC3YCy5rr0Z6Eknxdqsaxn08a2JtE=s0)
-
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAHSPc8s0XmqQSp-EqTR2wma/luontokuvat/syksy/IMG_0637-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACN5WDJL-MLjBkj-Fco12Vua/luontokuvat/syksy/IMG_0637.jpg)
