--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00013.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00013.md
@@ -2,8 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/CQvMxcBmgYa0jCZNW1qQ2QvflpZMoOOSCl6oeco_LoA=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADAuOlmHT0EGbjYPSSB6t8ma/luontokuvat/syksy/IMG27512-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/E2zFMqarDvvUsu1zKPp8ruvy3Vsux7Sz7hlGft6pX7A=w800)](https://lh3.googleusercontent.com/E2zFMqarDvvUsu1zKPp8ruvy3Vsux7Sz7hlGft6pX7A=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB_WM3Jq8XV0vZhoAyClUzTa/luontokuvat/kes%C3%A4/2/DSC13865-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABi-605ql3cW_dRXClfv-nda/luontokuvat/kes%C3%A4/2/DSC13865.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADDZbjLfjuI9GSc6l_LU7L-a/luontokuvat/syksy/IMG27512-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA58p4YMH5Hs9vcKSTVnx_ka/luontokuvat/syksy/IMG27512.jpg)
