--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00015.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00015.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/8zklhfcR9o0ODIAVNPxp2cSYJN0S4PgxCoI0VKjbPH8=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADtuJGWeEqGSQ-_kni48Bnva/luontokuvat/syksy/IMG27788-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/OCxqHPDE8coa6MtbigXCSwecv2gVtr7akOfgrCcBWH8=w800)](https://lh3.googleusercontent.com/OCxqHPDE8coa6MtbigXCSwecv2gVtr7akOfgrCcBWH8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB7gqWHbL-mrHRy8BQSsvu8a/luontokuvat/syksy/IMG27784-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB9BG-tFxYP15_x_jr6_kbxa/luontokuvat/syksy/IMG27784.jpg)
 
-[![](https://lh3.googleusercontent.com/zvEN1a3MIqEOt1Qzionto9anR80e2nzrwue6DBT2yjg=w800)](https://lh3.googleusercontent.com/zvEN1a3MIqEOt1Qzionto9anR80e2nzrwue6DBT2yjg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADseprx42S-ZGdjRUl6pT6Ra/luontokuvat/syksy/IMG27788-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABbvljuMnYwZGyN_wMncBtSa/luontokuvat/syksy/IMG27788.jpg)
