--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00020.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00020.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/1x6lp6qtOl4KJ5j5KcIW1xHO1li87vdyD_3jnFnIxFw=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACWwbADh_3YFnifhNJ3lQIHa/luontokuvat/kes%C3%A4/2/DSC12262-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/AjEA_mWvnrO4NyL7jrvTYnLiFof3n0uTliZ__1gzG18=w800)](https://lh3.googleusercontent.com/AjEA_mWvnrO4NyL7jrvTYnLiFof3n0uTliZ__1gzG18=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA6Ha8jAtUgBcw-AsZgrNWpa/luontokuvat/kes%C3%A4/2/DSC12262-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACOwcB6VMNOnea4xJGeAvzNa/luontokuvat/kes%C3%A4/2/DSC12262.jpg)
 
 *Fireweed*
