--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00025.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00025.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/49kGF8MdtO5Rlu6u92eWKb5c_G6FcJ0F2yg9it8wVi4=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAALCwL6v3VF8qemo2Ej8yRza/luontokuvat/kes%C3%A4/2/DSC13534-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/UBzgm_5dNEYwYChilUaDd1kPkv8rA2zHQzJ7eU85pvE=w800)](https://lh3.googleusercontent.com/UBzgm_5dNEYwYChilUaDd1kPkv8rA2zHQzJ7eU85pvE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADCMHjXLsQLk8wuaB4UKHZ4a/luontokuvat/syksy/DSC14485-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACZN3paO__s_EaJMLrgH1sGa/luontokuvat/syksy/DSC14485.jpg)
 
-[![](https://lh3.googleusercontent.com/4iSuVT3wr2yF0aB7IbvL1gjNtVk07ftnCDTev2tk98g=w800)](https://lh3.googleusercontent.com/4iSuVT3wr2yF0aB7IbvL1gjNtVk07ftnCDTev2tk98g=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADPFAwPcHVi2i30OX6DPQtFa/luontokuvat/kes%C3%A4/2/DSC13436-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACUMllfwhsVdSfEC9xcShsVa/luontokuvat/kes%C3%A4/2/DSC13436.jpg)
 
-[![](https://lh3.googleusercontent.com/5ewC50enrSfgFmScg53kUuOd7U2cMPXhozlpIlHGqC0=w800)](https://lh3.googleusercontent.com/5ewC50enrSfgFmScg53kUuOd7U2cMPXhozlpIlHGqC0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADvhO_j939iskfSU9uDvgkHa/luontokuvat/kes%C3%A4/2/DSC13534-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADtBK4tnoqfc6oBuuOUuD7Ya/luontokuvat/kes%C3%A4/2/DSC13534.jpg)
