--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00030.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00030.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/f6O9tyS7MFD6zzC3AzIMzUBlNcV4iG9zRDgMkrz8A6w=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABq4tqO_yUJhrZkyI3SnRxfa/luontokuvat/syksy/DSC14351-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/57kPEER9wUuRU5kVj8ohyWZUd--qSG8jEt9f9l5psWU=w800)](https://lh3.googleusercontent.com/57kPEER9wUuRU5kVj8ohyWZUd--qSG8jEt9f9l5psWU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAIr0Y9_68NzBRR7NYx_OcKa/luontokuvat/syksy/DSC14351-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAehB9jyyGGWRIH_wTZJ-GTa/luontokuvat/syksy/DSC14351.jpg)
