--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00032.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00032.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/S_oYKJ_X3H-QTDF-XKkTGmLWdaInOIGRXJejsoGOitc=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABdBZEsOBOuUd-0jxU0AAOca/luontokuvat/syksy/DSC14447-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/EaXaVwm8FkRY_KTXxW9QKRLSedF-uSw_cmezwyHEEg8=w800)](https://lh3.googleusercontent.com/EaXaVwm8FkRY_KTXxW9QKRLSedF-uSw_cmezwyHEEg8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADlufA-B71ymIgQmYtgU2M0a/luontokuvat/syksy/DSC14447-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA-adG_zOqvryAH20nzS8rqa/luontokuvat/syksy/DSC14447.jpg)
