--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00034.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00034.md
@@ -2,11 +2,11 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/-JtB1TIF0I3SSvAQZlu2oDsT29GBpuEZIFXfPLnHH_c=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACzzkLRLesT1_LUrqrxp9Z6a/luontokuvat/syksy/DSC14619-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/cPg5LEbig3kkpigrfw1Fs0xhURx3NJVPY_05Gt3Fzyo=w800)](https://lh3.googleusercontent.com/cPg5LEbig3kkpigrfw1Fs0xhURx3NJVPY_05Gt3Fzyo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABC_PVPsHW9NXTiGrf96S_na/luontokuvat/syksy/DSC14619-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACR1bW2xJ6MXmUfu_pHsVz6a/luontokuvat/syksy/DSC14619.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAFxuntm1Krk_5JLqG_UjMZa/luontokuvat/syksy/2/DSC14645-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADQaijubN1tK2hG18l-ANZxa/luontokuvat/syksy/2/DSC14645.jpg)
 
