--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00036.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00036.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/Fb2fycskU3meUcp_xa0l-NBN0zKbb8boGmmG6pd-jYo=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADPBqw45yp6ufj97MPLlO3Za/luontokuvat/syksy/DSC14948-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/ziYQQt84orQyuISBf_mc5Xk10xS_khyaeHmfAKzVWR0=w800)](https://lh3.googleusercontent.com/ziYQQt84orQyuISBf_mc5Xk10xS_khyaeHmfAKzVWR0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAZEBRC52qBMvKExygO8Z7ca/luontokuvat/syksy/DSC14930-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAClFo5s1jxpNUeOT82fnURa/luontokuvat/syksy/DSC14930.jpg)
 
-[![](https://lh3.googleusercontent.com/-SyCfBqpC-tWH12i6Vtyd3AHRW0VDAbZ7hivPYDqj0k=w800)](https://lh3.googleusercontent.com/-SyCfBqpC-tWH12i6Vtyd3AHRW0VDAbZ7hivPYDqj0k=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC09FPVuzFeE-YMqtF2k9oDa/luontokuvat/syksy/DSC14948-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADxPXUDAHnBoF4Xlb7Pino-a/luontokuvat/syksy/DSC14948.jpg)
