--- a/luontokuvat/syksy/_posts/2015-07-14-00011.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00011.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/nYNVG-a8JZ32Y-0WWQlReZTdOyDVlGOj17y5jCz8r-E=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAbLoKD4HweoTpYhSn0hCt0a/luontokuvat/kes%C3%A4/1/20130902_202611-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/gSYyXelQFyAKDf5WnRs81IcnS5FrEJzjmGm8Cv8RtqU=w800)](https://lh3.googleusercontent.com/gSYyXelQFyAKDf5WnRs81IcnS5FrEJzjmGm8Cv8RtqU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABMKXr9KeavVLpFiU5tulyLa/luontokuvat/kes%C3%A4/1/20130902_202605-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADuwi_N_WXfe5VpDQdS82aia/luontokuvat/kes%C3%A4/1/20130902_202605.jpg)
 
-[![](https://lh3.googleusercontent.com/g94-FPktv_bWBcke2VIZC0BL46saamyyASNyofdNmG8=w800)](https://lh3.googleusercontent.com/g94-FPktv_bWBcke2VIZC0BL46saamyyASNyofdNmG8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAApuksAcHcF9JLQ_Bxdmrtma/luontokuvat/kes%C3%A4/1/20130902_202611-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD_ILmgDejFe2o8U8TaQl4na/luontokuvat/kes%C3%A4/1/20130902_202611.jpg)
