--- a/luontokuvat/syksy/_posts/2015-07-14-00012.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00012.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/gt-jm7b1s_-KtCuDJq_KkO0XMK4D39YGJivEHmOeJHI=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACkjeYtDqKLhUHPrrpkylVGa/luontokuvat/syksy/IMG_20130907_203650-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/gp2Zq6ggk4_YsccOyzuRjTVmzONP6JXgIdyKTwtBmAY=w800)](https://lh3.googleusercontent.com/gp2Zq6ggk4_YsccOyzuRjTVmzONP6JXgIdyKTwtBmAY=s0)
+[![](hhttps://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABW4Ed2iL2UiUJMYjeX4rhLa/luontokuvat/syksy/IMG_20130907_203650-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC-0wxdlunw77h7GWG0e0tta/luontokuvat/syksy/IMG_20130907_203650.jpg)
