--- a/luontokuvat/syksy/_posts/2015-07-14-00023.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00023.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/Ix4ZINj9DDm2Xvq2Rdpkz1sVmbhVK2WliXFqLNd2ZYA=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADmSrX2tLbFwhWajNVURNrLa/luontokuvat/kes%C3%A4/2/DSC13160-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/CcRgYxq-tPNvVMIvEUYKizPFir7LIlBIoWhW9LJ5CxI=w800)](https://lh3.googleusercontent.com/CcRgYxq-tPNvVMIvEUYKizPFir7LIlBIoWhW9LJ5CxI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACim_6aTqTPZgfLrWlJyzWra/luontokuvat/kes%C3%A4/2/DSC13160-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACfArFbWbqmaanDnqrz2UZxa/luontokuvat/kes%C3%A4/2/DSC13160.jpg)
