--- a/luontokuvat/syksy/_posts/2015-07-14-00026.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00026.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/cQSsj6qysEf-ZzU6WfSYpZiT1J30iFqDP2I4BOCmxQY=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD8lyDRcuhQ4rTYJ6QwVbsBa/luontokuvat/kes%C3%A4/2/DSC13607-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/kXTJsXFE5azJqHaxVQQC-EIqcIUhJ9IESpUJmaYsVic=w800)](https://lh3.googleusercontent.com/kXTJsXFE5azJqHaxVQQC-EIqcIUhJ9IESpUJmaYsVic=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB1sA09eqtowQ9xHB1CumSKa/luontokuvat/kes%C3%A4/2/DSC13607-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACe0G4Di3HMo6kSzqfKhYwga/luontokuvat/kes%C3%A4/2/DSC13607.jpg)
