--- a/luontokuvat/syksy/_posts/2015-07-14-00035.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00035.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/RWn-beP0es4fKlP8l_OVXWGT16w3pEnUskTudm0E4xM=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADsZVz_D2m6udxADUKcisHaa/luontokuvat/syksy/DSC14655-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/q0467BzvY5bRP3EkQQWJ4807iVhZl0rCOkWy0iPgf-I=w800)](https://lh3.googleusercontent.com/q0467BzvY5bRP3EkQQWJ4807iVhZl0rCOkWy0iPgf-I=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABxlMSTVRss2y4BJjpFQuO9a/luontokuvat/syksy/DSC14655-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABYEbDHjRZoHkiaJDvB2t--a/luontokuvat/syksy/DSC14655.jpg)
