--- a/luontokuvat/talvi/_posts/2015-07-14-00017.md
+++ b/luontokuvat/talvi/_posts/2015-07-14-00017.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/arzWxwxVDAAn-5DiX6gm_o6TsaUD7W6oWRBZfztBuTI=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD5kOefN1uw7KDvU904ybcka/luontokuvat/talvi/DSC19857-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/GdhVsuQNYlz54hjBlv4qWU3zbeXYFwKS32JC4atFkns=w800)](https://lh3.googleusercontent.com/GdhVsuQNYlz54hjBlv4qWU3zbeXYFwKS32JC4atFkns=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA89rtSrepauE_fpb1EF3vma/luontokuvat/talvi/DSC19847-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACqr_tAvST0KPDFc3bNg5nca/luontokuvat/talvi/DSC19847.jpg)
 
-[![](https://lh3.googleusercontent.com/SQf5pVYmBIDZLa6J7NZ7lqfEruO0wjG3Dw6mzmXDLs4=w800)](https://lh3.googleusercontent.com/SQf5pVYmBIDZLa6J7NZ7lqfEruO0wjG3Dw6mzmXDLs4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABqjEEMhbVb56Pf-SqRdu0ra/luontokuvat/talvi/DSC19857-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAByD7vUlEkkLx79oCY7npWea/luontokuvat/talvi/DSC19857.jpg)
