--- a/luontokuvat/talvi/_posts/2015-07-14-00020.md
+++ b/luontokuvat/talvi/_posts/2015-07-14-00020.md
@@ -2,9 +2,9 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/N72lPT2XkOug0HLTdmGXaRwXnVOFFTQErhV2w-I5n4k=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACgMCNtfp8UHZV8Y9hkcxaTa/luontokuvat/talvi/DSC22739-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/rBW_9J2B1fCeEq3xii0rZoB6oH7fTKYu-C8TUfpJ3is=w800)](https://lh3.googleusercontent.com/rBW_9J2B1fCeEq3xii0rZoB6oH7fTKYu-C8TUfpJ3is=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA6kK2zAiPigqYD8vmL-DSka/luontokuvat/talvi/DSC22739-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD_OONC60BupGLAb8DxArmXa/luontokuvat/talvi/DSC22739.jpg)
 
