--- a/luontokuvat/talvi/_posts/2015-07-14-00028.md
+++ b/luontokuvat/talvi/_posts/2015-07-14-00028.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/xAvXYlxw91ad1YDxR11wFv1T6qSIz-W-uhKEYKgvYeQ=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAuL25AgRtXiNz3-D0mxnJ6a/luontokuvat/talvi/DSC24163-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/aw8AitZYdEqaz7Hadf6PMbsYLaLazNJVPCUagIQcg_w=w800)](https://lh3.googleusercontent.com/aw8AitZYdEqaz7Hadf6PMbsYLaLazNJVPCUagIQcg_w=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAVe8kK2qxvikP_MZk4qSNIa/luontokuvat/talvi/DSC24159-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAIZR7T90_58TyFXdNGXtQaa/luontokuvat/talvi/DSC24159.jpg)
 
-[![](https://lh3.googleusercontent.com/vZzEggMVc2HHRdGdvX2d3uiyMtOhfDoKR5NMUBgnzTU=w800)](https://lh3.googleusercontent.com/vZzEggMVc2HHRdGdvX2d3uiyMtOhfDoKR5NMUBgnzTU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB_nFYzhW1_nosM5adL5uXca/luontokuvat/talvi/DSC24163-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADD3PJvmX35vnTe06OVka5da/luontokuvat/talvi/DSC24163.jpg)
